# acmp

./: .gitignore  README.md  pyproject.toml  requirements.txt
acmp/: __init__.py  cli.py  config.py  pipeline.py
acmp/animation/: ai_motion.py  engine.py  ken_burns.py  parallax.py  transitions.py  wan_animator.py
acmp/depth/: estimator.py
acmp/ingest/: loader.py  pdf_extractor.py
acmp/layers/: inpainter.py  segmenter.py
acmp/panels/: detector.py
acmp/scene/: analyzer.py  prompts.py
acmp/utils/: image.py  reading_order.py
acmp/video/: assembler.py
configs/: default.yaml
scripts/: download_models.py
